--- a/assignment2/assignemt2.html
+++ b/assignment2/assignemt2.html
@@ -4,17 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab 3</title>
+    <link rel = "stylesheet" href = "assignment2.css">
 </head>
 <body>
+
+    <header class ="header">
+    
+
+        <nav class="navigationbar">
+            <img class = "logo" src = "photos/pacmanlogo2.jpg" alt = "logo">
+            <a href="assignemt2.html" >1D Paku Paku</a>
+        </nav>
+
+    </header>
+
     <h1>Pacman Game</h1>
     <p>Please look console for program running</p>
     <input type="number" id="randomN" placeholder="Enter the map size">
     <br>
     <button onclick="makeMap()">Make Game Map</button>
     <h2>Score</h2>
-    <p id="score">0</p>
+    <p id="score" class = "scoreboard">0</p>
     <h2>Map</h2>
-    <P id="map"></P>
+    <P id="map" class = "board"></P>
     <button onclick="start()">Start the game</button>
     <button onclick="left()">Go left</button>
     <button onclick="right()">Go right</button>
