--- a/assignment2/assignemt2.html
+++ b/assignment2/assignemt2.html
@@ -18,15 +18,22 @@
 
     </header>
 
-    <h1>Pacman Game</h1>
-    <p>Please look console for program running</p>
+    <h1>Initialize your 1D Paku Paku Game</h1>
+    <br>
+
     <input type="number" id="randomN" placeholder="Enter the map size">
     <br>
     <button onclick="makeMap()">Make Game Map</button>
-    <h2>Score</h2>
+    <br>
+    <br>
+    <h2>Scoreboard:</h2>
+  
     <p id="score" class = "scoreboard">0</p>
+    <br>
     <h2>Map</h2>
+    <br>
     <P id="map" class = "board"></P>
+    <br>
     <button onclick="start()">Start the game</button>
     <button onclick="left()">Go left</button>
     <button onclick="right()">Go right</button>
